Fix spacing in nav and dropdown

--- a/src/containers/Nav/Nav.scss
+++ b/src/containers/Nav/Nav.scss
@@ -16,17 +16,23 @@
     display: flex;
 
     .login-link {
-      margin: 0;
-      padding: 0 15px;
+      margin: 0 10px;
+      padding: 5px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
   .nav-link {
-    padding: 0 15px;
+    margin: 0 10px;
+    padding: 5px;
   }
 
   .login-dropdown {
     background: #999;
+    padding: 20px;
     position: absolute;
     top: 70px;
     right: 30px;
