--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,11 @@ body {
   font-family: "Roboto", sans-serif, -apple-system, BlinkMacSystemFont;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  a:hover,
+  button:hover {
+    cursor: pointer;
+  }
 }
 
 @import './node_modules/normalize-scss/sass/normalize';
@@ -11,5 +16,6 @@ body {
 @import '../containers/MovieContainer/MovieContainer';
 @import '../components/MovieCard/MovieCard';
 @import '../containers/Nav/Nav';
+@import '../containers/LoginForm/LoginForm';
 @import '../components/SearchBar/SearchBar';
 
